# pointpillar_ros

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.xml  pointpillar_node.cpp
data/pointpillar/obj_txt/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+337 more)
data/pointpillar/yaml/: pointpillarconfig.yaml
data/system/log/: interactive_node.INFO  interactive_node.nvidia-desktop.nvidia.log.INFO.20240329-174308.64036  interactive_node.nvidia-desktop.nvidia.log.INFO.20240329-175321.71421
data/system/selfcheck/: output.pcd
data/system/yaml/: system_param.yaml
launch/: pointpillar.launch
src/: lidar-backbone.cu  lidar-backbone.hpp  lidar-postprocess.cu  lidar-postprocess.hpp  lidar-voxelization.cu  lidar-voxelization.hpp  pointpillar.cpp  pointpillar_ros.cpp  pointpillar_ros.hpp
